samples/_failures_safe/1761703044_30b349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6198f08.c: In function ‘pointcloud_transform’:
./samples/SAFE/__tmp_b6198f08.c:118:5: error: expected expression at end of input
  118 |     for (size_t i = 0; i < input->count;
      |     ^~~
./samples/SAFE/__tmp_b6198f08.c:118:5: error: expected declaration or statement at end of input
